@@ -1,3 +1,8 @@
+2006-03-17	ujwal
+	
+	* PTYTextView:-refresh selects only dirty regions to refresh before 
+	  calling drawRect.
+
 2006-03-15  fabian
 
     * Put in locks to eliminate the bugs related to opening/closing sessions.
